Added required metadata data for tf dataloader.

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,8 @@
 ignore_missing_imports = True
 
 [flake8]
-max-line-length = 88
+#https://en.wikipedia.org/wiki/Color_Graphics_Adapter
+max-line-length = 120 # 80 caracters was a limitation of CGA graphics adapters. Hopefully no one still use these ;)
 
 [pydocstyle]
 ignore = D100, D104, D203, D213
