--- a/setup.cfg
+++ b/setup.cfg
@@ -2,8 +2,9 @@
 ignore_missing_imports = True
 
 [flake8]
+#80 caracters was a limitation of CGA graphics adapters. Hopefully no one still use these ;)
 #https://en.wikipedia.org/wiki/Color_Graphics_Adapter
-max-line-length = 120 # 80 caracters was a limitation of CGA graphics adapters. Hopefully no one still use these ;)
+max-line-length = 120 
 
 [pydocstyle]
 ignore = D100, D104, D203, D213
