--- a/setup.cfg
+++ b/setup.cfg
@@ -7,4 +7,4 @@ ignore_missing_imports = True
 max-line-length = 120 
 
 [pydocstyle]
-ignore = D100, D104, D203, D213
+ignore = D100, D104, D203, D213, W293
