Conflict between linter rules

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,9 @@ ignore_missing_imports = True
 [flake8]
 #80 caracters was a limitation of CGA graphics adapters. Hopefully no one still use these ;)
 #https://en.wikipedia.org/wiki/Color_Graphics_Adapter
-max-line-length = 120 
+max-line-length = 120
+#Seems that there is a conflict with the auto-formater in lint.sh
+ignore=E203
 
 [pydocstyle]
 ignore = D100, D104, D203, D213, W293
