--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ ignore_missing_imports = True
 #https://en.wikipedia.org/wiki/Color_Graphics_Adapter
 max-line-length = 120
 #Seems that there is a conflict with the auto-formater in lint.sh
-ignore=E203
+ignore=E203, W503
 
 [pydocstyle]
 ignore = D100, D104, D203, D213, W293
