--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,13 @@
 tensorflow == 2.0.0
+tensorflow_gpu == 2.0.0
 mypy == 0.761
 flake8 == 3.7.9
 pytest == 5.3.4
 pydocstyle == 5.0.2
 black == 19.10b0
 pandas == 0.25.3
+pyqt5==5.08
+grpcio>=1.24.3
+tqdm>=4.42
+pvlib==0.7.1
+tables==3.6.1
