--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,11 @@
 ignore_missing_imports = True
 
 [flake8]
-max-line-length = 88
+#80 caracters was a limitation of CGA graphics adapters. Hopefully no one still use these ;)
+#https://en.wikipedia.org/wiki/Color_Graphics_Adapter
+max-line-length = 120
+#Seems that there is a conflict with the auto-formater in lint.sh
+ignore=E203, W503
 
 [pydocstyle]
-ignore = D100, D104, D203, D213
+ignore = D100, D104, D203, D213, W293
