Refactor Metadata & Data Loading Process (#15)
* Refactor Metadata - data loading process

* Fix linting

* Better variable name

* Fix missing import

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,4 +9,5 @@ max-line-length = 120
 ignore=E203, W503
 
 [pydocstyle]
-ignore = D100, D104, D203, D213, W293
+ignore = D203, D204, D213, D215, D400, D401, D404, D406, D407, D408, D409, D413, # Google Style
+         D100, D104 # Some internal modules don't need doctrings (ex: empty __init__.py)
