--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
         python-version: '3.7.x'
         architecture: 'x64'
     - name: Install Dependencies
-      run: pip install -r requirements.txt
+      run: pip install -r requirements/dev.txt
     - name: Lint
       run: ./scripts/lint.sh
     - name: Tests
