--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,8 @@ on: [push]
 jobs:
   test:
     runs-on: ubuntu-latest
+    env:
+      SLURM_TMPDIR: /tmp
     steps:
     - uses: actions/checkout@v1
     - uses: actions/setup-python@v1
