--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,14 +6,14 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
-    - uses: actions/setup-python@v1
-      with:
-        python-version: '3.7.x'
-        architecture: 'x64'
-    - name: Install Dependencies
-      run: pip install -r requirements/dev.txt
-    - name: Lint
-      run: ./scripts/lint.sh
-    - name: Tests
-      run: pytest tests
+      - uses: actions/checkout@v1
+      - uses: actions/setup-python@v1
+        with:
+          python-version: "3.7.x"
+          architecture: "x64"
+      - name: Install Dependencies
+        run: pip install -r requirements/dev.txt
+      - name: Lint
+        run: ./scripts/lint.sh
+      - name: Tests
+        run: pytest tests
